codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 3367
expression: "render_snapshot(&pane, area)"
---
Elpising… (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
• Queued follow-up inputs                       
  ↳ Queued follow-up question                   
    ↑ edit all · enter send                     
│                                               
› Ask Elpis to do anything                      
│                                               
        100% context left · Tab Context Ledger
